--- a/src/style/layout/_menu.scss
+++ b/src/style/layout/_menu.scss
@@ -1,3 +1,6 @@
+@use "mixins";
+@use "variables";
+
 .layout-sidebar {
     position: fixed;
     width: 300px;
@@ -7,9 +10,9 @@
     user-select: none;
     top: 7rem;
     left: 2rem;
-    transition: transform $transitionDuration, left $transitionDuration;
+    transition: transform variables.$transitionDuration, left variables.$transitionDuration;
     background-color: var(--surface-overlay);
-    border-radius: $borderRadius;
+    border-radius: variables.$borderRadius;
     padding: 0.5rem 1rem;
     box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.02), 0px 0px 2px rgba(0, 0, 0, 0.05), 0px 1px 4px rgba(0, 0, 0, 0.08);
 }
@@ -32,14 +35,14 @@
 .p-menuitem-content :hover {
     background-color: var(--surface-hover);
     overflow: hidden;
-    border-radius: $borderRadius;
+    border-radius: variables.$borderRadius;
 }
 
 
 .p-menuitem-content :focus {
-    @include focused-inset();
+    @include mixins.focused-inset();
     overflow: hidden;
-    border-radius: $borderRadius;
+    border-radius: variables.$borderRadius;
 }
 
 .p-menu .p-menuitem:not(.p-highlight):not(.p-disabled).p-focus>.p-menuitem-content {
@@ -50,7 +53,7 @@
 .p-menuitem {
     margin-left: 10px;
     overflow: hidden;
-    border-radius: $borderRadius;
+    border-radius: variables.$borderRadius;
 }
 
 .p-menu-list {
@@ -73,5 +76,5 @@
     }
 
     font-weight: bold;
-    border-radius: $borderRadius;
+    border-radius: variables.$borderRadius;
 }
