--- a/src/style/layout/_responsive.scss
+++ b/src/style/layout/_responsive.scss
@@ -1,3 +1,5 @@
+@use "variables";
+
 @media screen and (min-width: 1960px) {
 
     .layout-main,
@@ -95,7 +97,7 @@
 
             .layout-mask {
                 display: block;
-                animation: fadein $transitionDuration;
+                animation: fadein variables.$transitionDuration;
             }
         }
     }
