--- a/src/style/layout/_topbar.scss
+++ b/src/style/layout/_topbar.scss
@@ -1,3 +1,6 @@
+@use "mixins";
+@use "variables";
+
 .layout-topbar {
     position: fixed;
     height: 5rem;
@@ -7,10 +10,10 @@
     width: 100%;
     padding: 0 2rem;
     background-color: var(--surface-card);
-    transition: left $transitionDuration;
+    transition: left variables.$transitionDuration;
     display: flex;
     align-items: center;
-    box-shadow: 0px 3px 5px rgba(0,0,0,.02), 0px 0px 2px rgba(0,0,0,.05), 0px 1px 4px rgba(0,0,0,.08);
+    box-shadow: 0px 3px 5px rgba(0, 0, 0, .02), 0px 0px 2px rgba(0, 0, 0, .05), 0px 1px 4px rgba(0, 0, 0, .08);
 
     .layout-topbar-logo {
         display: flex;
@@ -27,7 +30,7 @@
         }
 
         &:focus {
-            @include focused();
+            @include mixins.focused();
         }
     }
 
@@ -41,7 +44,7 @@
         width: 3rem;
         height: 3rem;
         cursor: pointer;
-        transition: background-color $transitionDuration;
+        transition: background-color variables.$transitionDuration;
 
         &:hover {
             color: var(--text-color);
@@ -49,7 +52,7 @@
         }
 
         &:focus {
-            @include focused();
+            @include mixins.focused();
         }
 
         i {
@@ -111,7 +114,7 @@
             position: absolute;
             flex-direction: column;
             background-color: var(--surface-overlay);
-            box-shadow: 0px 3px 5px rgba(0,0,0,.02), 0px 0px 2px rgba(0,0,0,.05), 0px 1px 4px rgba(0,0,0,.08);
+            box-shadow: 0px 3px 5px rgba(0, 0, 0, .02), 0px 0px 2px rgba(0, 0, 0, .05), 0px 1px 4px rgba(0, 0, 0, .08);
             border-radius: 12px;
             padding: 1rem;
             right: 2rem;
@@ -125,7 +128,7 @@
                 display: block
             }
 
-        .layout-topbar-button {
+            .layout-topbar-button {
                 margin-left: 0;
                 display: flex;
                 width: 100%;
